--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "/usr/local/Cellar/python@3.9/3.9.1/Frameworks/Python.framework/Versions/3.9/bin/python3.9",
+    "python.pythonPath": "env/bin/python",
     "git.ignoreLimitWarning": true
 }
