--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,4 +1,4 @@
-name: Build Docker image and deploy to Heroku
+name: CI
 on:
   # Trigger the workflow on push or pull request,
   # but only for the main branch
